--- a/OnlineService.html
+++ b/OnlineService.html
@@ -10,6 +10,119 @@
     <title>MD12</title>
 </head>
 <body>
+    <br><br>
+    <div align="center">
+        <img src="./image/5555.webp" alt="P1" height="300">
+    </div>
+    <br><br>
+    <h1 align="center">
+        Online Services V.1.0
+    </h1>
+    <h2 align="center">
+        "ชำระค่าสาธารณูปโภคหลากหลายเพื่อความสะดวกของคุณ"
+    </h2>
+    <hr width="1500">
+
+    <font>
+        <form action="#" method="GET/POST">
+            <table align="center" border="0" cellpadding="11">
+                <tr>
+                    <td align="right">
+                        รหัสประจำตัวประชาชน
+                    </td>
+                    <td>
+                        <input type="text" name="national_id" id="national_id">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="right">
+                        คำนำหน้า
+                    </td>
+                    <td>
+                        <input type="radio" name="" id="" value="นาย">นาย
+                        <input type="radio" name="" id="" value="นาง">นาง
+                        <input type="radio" name="" id="" value="นางสาว">นางสาว
+                    </td>
+                </tr>
+                <tr>
+                    <td align="right">
+                        ชื่อ - สกุล
+                    </td>
+                    <td>
+                        <input type="text" name="name" id="">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="right">
+                        ค่าสาธารณูปโภค
+                    </td>
+                    <td>
+                        <input type="checkbox" name="" id="">ปะปา
+                        &nbsp;
+                        <input type="text" name="price" id=""> บาท
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="checkbox" name="" id="">ไฟฟ้า
+                        &nbsp;
+                        <input type="text" name="price" id=""> บาท
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="checkbox" name="" id="">โทรศัพท์บ้าน
+                        &nbsp;
+                        <input type="text" name="price" id=""> บาท
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="checkbox" name="" id="">AIS
+                        &nbsp;
+                        <input type="text" name="price" id=""> บาท
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="checkbox" name="" id="">DTAC
+                        &nbsp;
+                        <input type="text" name="price" id=""> บาท
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="checkbox" name="" id="">TRUE
+                        &nbsp;
+                        <input type="text" name="price" id=""> บาท
+                    </td>
+                </tr>
+                <tr>
+                    <td align="right">
+                        ส่วนลดเฉพาะค่าสาธารณูปโภค
+                    </td>
+                    <td>
+                        <select name="sale" id="">
+                            <option value="">ไม่มีส่วนลด</option>
+                            <option value="">ลด 5%</option>
+                            <option value="">ลด 10%</option>
+                        </select>
+                    </td>
+                </tr>
+            </table>
+            <hr width="1500">
+            <div align="center">
+                <input type="button" value="ชำระค่าบริการ">
+                &nbsp;
+                <input type="button" value="ยกเลิก">
+            </div>
+
+        </form>
+    </font>
+    <br>
+    <h3 align="center">
+        <u>หมายเหตุ</u> ค่าบริการ 15 บาทต่อรายการสาธารณูปโภค และไม่นำไปคิดกับส่วนลด
+    </h3>
     
 </body>
 </html>
